--- a/assets/scss/default/_vars.scss
+++ b/assets/scss/default/_vars.scss
@@ -1,4 +1,7 @@
 :root {
+	--font-family: 'Manrope';
+	--second-family: 'PlayfairDisplay';
+
 	--container-w: 74.375rem; //1190px;
 	--container-p: 1rem;
 	//--section-p: 9.4rem;
